# Les10_Task2

./: CMakeLists.txt  Figura.cpp  Figura.h  Parall.cpp  Parall.h  Quad.cpp  Quad.h  README.md  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h  Task3.cpp  TriEquil.cpp  TriEquil.h  TriIsos.cpp  TriIsos.h  TriRight.cpp  TriRight.h  Triangle.cpp  Triangle.h  myFunc.cpp  myFunc.h
