cmake_minimum_required(VERSION 3.22.0)

project(Figura)

add_executable(Figura
Figura.cpp
Figura.h
myFunc.cpp
myFunc.h
Parall.cpp
Parall.h
Quad.cpp
Quad.h
Rectangle.cpp
Rectangle.h
Rhombus.cpp
Rhombus.h
Square.cpp
Square.h
Task3.cpp
Triangle.cpp
Triangle.h
TriEquil.cpp
TriEquil.h
TriIsos.cpp
TriIsos.h
TriRight.cpp
TriRight.h)
